updates 20.10.2024 update on home/main page +logo on google search 2

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   -->
   <base href="/">
 
+  <meta http-equiv='cache-control' content='no-cache'>
+  <meta http-equiv='expires' content='0'>
+  <meta http-equiv='pragma' content='no-cache'>
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Magic Feet Sibiu. Ai grijă de pașii tăi cu Magic Feet Sibiu! Sănătatea picioarelor tale este la fel de importantă ca și destinatia către care te îndrepți">
