--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
   <meta name="description" content="Magic Feet Sibiu. Ai grijă de pașii tăi cu Magic Feet Sibiu! Sănătatea picioarelor tale este la fel de importantă ca și destinatia către care te îndrepți">
 
   <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="magic_feet">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
