Update text size on main

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="">
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -14,15 +13,13 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="">
 
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Magic Feet Sibiu. Ai grijă de pașii tăi cu Magic Feet Sibiu! Sănătatea picioarelor tale este la fel de importantă ca și destinatia către care te îndrepți">
   <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="magic_feet">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
