--- a/web/index.html
+++ b/web/index.html
@@ -18,10 +18,10 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Magic Feet Sibiu. Ai grijă de pașii tăi cu Magic Feet Sibiu! Sănătatea picioarelor tale este la fel de importantă ca și destinatia către care te îndrepți">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="magic_feet">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
@@ -33,6 +33,6 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="flutter_bootsrtap.js" async></script>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
